--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">ApiCartoes</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="text_btn_login">LOGIN</string>
-    <string name="headLogin">Login</string>
+    <string name="headLogin">login</string>
     <string name="userName">usuario</string>
     <string name="password">senha</string>
     <string name="forgotPassword">esqueci minha senha</string>
@@ -79,5 +79,7 @@
     <string name="txt_conversor_de_taxas">conversor de taxas</string>
     <string name="title_valor_final_muito_alto">Erro de API</string>
     <string name="txt_valor_final_muito_alto">Valor retornado da API é NaN ou muito alto</string>
+    <string name="headPurchaseList">lista de compras</string>
+    <string name="headCardList">lista de cartões</string>
 
 </resources>
